lista de interesse funcionando

--- a/rhecruta-mobile/www/templates/vagas.html
+++ b/rhecruta-mobile/www/templates/vagas.html
@@ -27,7 +27,7 @@
         <ion-option-button class="button-balanced">
           Candidatar
         </ion-option-button>
-        <ion-option-button class="button-positive">
+        <ion-option-button class="button-positive" ng-click="interesse({{item.id}})">
           Interesse
         </ion-option-button>
       </ion-item>
