--- a/rhecruta-mobile/www/templates/listaDeInteresses.html
+++ b/rhecruta-mobile/www/templates/listaDeInteresses.html
@@ -1,21 +1,17 @@
 <ion-view title="Lista de interesses" id="page2" style="background-color:#C73610;">
   <ion-content padding="true" class="has-header">
-    <ion-list id="listaDeInteresses-list4">
-      <ion-item id="listaDeInteresses-list-item13" ui-sref="menu.detalhesVaga()">Item 1
-        <ion-option-button class="button-balanced">
-          Candidatar
-        </ion-option-button>
-      </ion-item>
-      <ion-item id="listaDeInteresses-list-item14">Item 2
-        <ion-option-button class="button-balanced">
-          Candidatar
-        </ion-option-button>
-      </ion-item>
-      <ion-item id="listaDeInteresses-list-item15">Item 3
-        <ion-option-button class="button-balanced">
-          Candidatar
-        </ion-option-button>
-      </ion-item>
+
+      <ion-list id="vagas-list2">
+
+        <ion-item  ng-repeat="item in interesseVaga">
+          <h4>{{item.title}}</h4>
+          <p>{{item.company_name}}</p>
+          <ion-option-button class="button-balanced">
+            Candidatar
+          </ion-option-button>
+        </ion-item>
+
     </ion-list>
+
   </ion-content>
 </ion-view>
