--- a/rhecruta-mobile/www/templates/vagas.html
+++ b/rhecruta-mobile/www/templates/vagas.html
@@ -21,7 +21,7 @@
 
     <ion-list id="vagas-list2">
 
-      <ion-item id="vagas-list-item7" ng-repeat="item in vagas">
+      <ion-item id="vagas-list-item7" ng-repeat="item in vagas"  href="#/side-menu21/detalhesVaga/{{item.id}}">
         <h4>{{item.title}}</h4>
         <p>{{item.company_name}}</p>
         <ion-option-button class="button-balanced">
