inserindo sair no login

--- a/rhecruta-mobile/www/templates/menu.html
+++ b/rhecruta-mobile/www/templates/menu.html
@@ -18,6 +18,7 @@
         <ion-item id="menu-list-item2" ui-sref="menu.listaDeInteresses()" menu-close="">Lista de interesses</ion-item>
         <ion-item id="menu-list-item3" ui-sref="menu.candidaturas()" menu-close="">Lista de candidaturas</ion-item>
         <ion-item id="menu-list-item4" ui-sref="menu.entrevistas()" menu-close="">Entrevistas</ion-item>
+        <ion-item id="menu-list-item4" ui-sref="login()" menu-close="">Sair</ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
