--- a/rhecruta-mobile/www/templates/vagas.html
+++ b/rhecruta-mobile/www/templates/vagas.html
@@ -24,7 +24,7 @@
       <ion-item id="vagas-list-item7" ng-repeat="item in vagas"  href="#/side-menu21/detalhesVaga/{{item.id}}">
         <h4>{{item.title}}</h4>
         <p>{{item.company_name}}</p>
-        <ion-option-button class="button-balanced">
+        <ion-option-button class="button-balanced" ng-click="candidatura({{item.id}})">
           Candidatar
         </ion-option-button>
         <ion-option-button class="button-positive" ng-click="interesse({{item.id}})">
