--- a/rhecruta-mobile/www/templates/detalhesEntrevista.html
+++ b/rhecruta-mobile/www/templates/detalhesEntrevista.html
@@ -3,8 +3,8 @@
     <div class="list card">
 
       <div class="item item-avatar">
-        <p>dia</p>
-        <p>hora</p>
+        <p>{{entrevistaVaga.diaDaEntrevista}}</p>
+        <p>{{entrevistaVaga.horarioDaEntrevista}}</p>
       </div>
     </div>
   </ion-content>
