--- a/rhecruta-mobile/www/templates/entrevistas.html
+++ b/rhecruta-mobile/www/templates/entrevistas.html
@@ -1,21 +1,20 @@
 <ion-view title="Lista de entrevistas" style="background-color:#C73610;">
   <ion-content padding="true" class="has-header">
+
     <ion-list id="listaDeInteresses-list4">
-      <ion-item id="listaDeInteresses-list-item13" ui-sref="menu.detalhesEntrevista()">Item 1
-        <ion-option-button class="button-assertive">
+
+      <ion-item  ng-repeat="item in vagas">
+          <h4>{{item.title}}</h4>
+          <p>Empresa: {{item.company_name}}</p>
+          <p>Local: {{item.workplace}}</p>
+          <p>Data: {{teste.diaDaEntrevista}}</p>
+          <p>Hora: {{teste.horarioDaEntrevista}}</p>
+          <ion-option-button class="button-assertive" ng-click="cancelar()">
           Cancelar
         </ion-option-button>
       </ion-item>
-      <ion-item id="listaDeInteresses-list-item14">Item 2
-        <ion-option-button class="button-assertive">
-          Cancelar
-        </ion-option-button>
-      </ion-item>
-      <ion-item id="listaDeInteresses-list-item15">Item 3
-        <ion-option-button class="button-assertive">
-          Cancelar
-        </ion-option-button>
-      </ion-item>
+
     </ion-list>
+
   </ion-content>
 </ion-view>
