--- a/rhecruta-mobile/www/templates/login.html
+++ b/rhecruta-mobile/www/templates/login.html
@@ -4,8 +4,8 @@
       <div class="spacer" style="width: 300px; height: 55px;"></div>
       <ion-list id="login-list5">
         <label class="item item-input" id="login-input2">
-          <span class="input-label">Login</span>
-          <input type="email" name="login" ng-model="login.email">
+          <span class="input-label">Email</span>
+          <input type="email" name="email" ng-model="login.email">
         </label>
         <label class="item item-input" id="login-input3">
           <span class="input-label">Senha</span>
